Shop: Fixed spacing with delivery providers.

--- a/modules/shop/include/checkout_mobile.css
+++ b/modules/shop/include/checkout_mobile.css
@@ -49,7 +49,7 @@ div#checkout div.clear_float {
 table.checkout_details {
 	width: 100%;
 
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 
 	border: 1px solid white;
 	border-radius: 8px 8px 0px 0px;
@@ -66,6 +66,7 @@ div#checkout div.delivery_provider {
 	display: block;
 	height: 90px;
 
+	margin-bottom: 20px;
 	padding: 10px;
 
 	position: relative;
@@ -224,7 +225,7 @@ div#checkout div.delivery_method label input + div:before {
 	border: 1px solid #b0b0b0;
 	border-radius: 9px;
 	background-color: white;
-	background-image: url(../images/checkbox.png);
+	background-image: url(../images/radio.png);
 	background-position: 0px 0px;
 	background-repeat: no-repeat;
 	box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.2);
@@ -273,7 +274,7 @@ div.transaction_details {
 	display: block;
 	height: 90px;
 
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 	padding: 10px;
 
 	background-color: white;
